recursion.cons.lessons.recursion.cons.Length.scala.error
length:4: error: '=>' expected but '=' found.
		case l=Nil => count;
                      ^